--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,11 @@ dependencies:
   path: ^1.9.1
   page_transition: ^2.0.2
   animate_do: ^3.3.4
-  rules: ^2.0.0
+  rules: ^2.0.0 
   get: ^4.7.2
   get_storage: ^2.1.1
   pull_to_refresh_new: ^2.0.5
+  http: ^1.3.0
 
 
 dev_dependencies:
