--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get_storage: ^2.1.1
   pull_to_refresh_new: ^2.0.5
   http: ^1.3.0
+  dynamic_color: ^1.7.0
 
 
 dev_dependencies:
