--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   http: ^1.3.0
   dynamic_color: ^1.7.0
   animated_icon: ^0.0.9
+  progress_indicators: ^1.0.0
+
 
 
 dev_dependencies:
